[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "HeartSounds"
version = "0.0.2"
authors = [
  { name="Jack Peck"},
]
description = "A package for automatically annotating heart sounds locations based on ECG traces."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jackpeck/heartsounds"
"Bug Tracker" = "https://github.com/jackpeck/heartsounds/issues"